Fixing spacing for Github Icon

--- a/example/src/app.less
+++ b/example/src/app.less
@@ -65,7 +65,10 @@ strong { font-weight: bold; }
     }
 }
 .gh-logo {
-    i { font-size: 36px; }
+    i {
+        font-size: 36px;
+        padding-bottom: 5px;
+    }
 }
 
 // ====================================
